--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
           </div>
           <div class="card mb-4">
             <img
-              src="https://marketplace.canva.com/EAFZR0CrBKU/1/0/1600w/canva-portada-para-podcast-emprender-ilustrado-naranja-U2k3xpDwEEo.jpg"
+              src="img/Computacion.jpeg"
               class="card-img-top"
               alt="..."
               draggable="false"
