--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
           </div>
           <div class="card mb-4">
             <img
-              src="img/pd.png"
+              src="img/pd_nuevo.png"
               class="card-img-top"
               alt="..."
               draggable="false"
