--- a/Frontend/assets/html/AggDocente.html
+++ b/Frontend/assets/html/AggDocente.html
@@ -1,29 +1,28 @@
-<html lang="en"></html>
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add.Admin.Alumnos</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!--Montserrat-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Admin.Add.Docentes(AAD)</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!--Montserrat-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 
-
-      </head>
+</head>
 
 <body>
    <!-- Barra de navegación -->
   <!-- fixed top sirve para que el nav no se mueva-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <a class="navbar-brand" href="index.html">
-      <img src="img/IESCentral.png" alt="LogoIES" href="https://www.geahub.online" style="height: 90px" />
+      <img src="../img/IESCentral.png" alt="LogoIES" href="https://www.geahub.online" style="height: 90px" />
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,17 +68,17 @@
     </div>
   </nav>
 
-
     <!-- Saludo -->
     <header class="hero bg-primary text-white text-center">
         <div class="container">
-            <h1 class="display-4">Bienvenid@ al editor de Alumnos</h1>
+            <h1 class="display-4">Bienvenid@ al editor de Docentes</h1>
             <p class="lead">Formando técnicos EXITOSOS.</p>
         </div>
     </header>
 
     <br>
     <br>
+
 
 
     <div class="container mt-5">
@@ -94,12 +93,12 @@
                 <input type="text" class="form-control" id="apellido" placeholder="Ingresa tu apellido" required />
             </div>
             <div class="mb-3">
-                <label for="carnet" class="form-label">Carnet</label>
-                <input type="text" class="form-control" id="carnet" placeholder="Ingresa tu carnet" required />
+                <label for="curso" class="form-label">Curso</label>
+                <input type="text" class="form-control" id="curso" placeholder="Ingresa el curso" required />
             </div>
             <div class="mb-3">
-                <label for="grado" class="form-label">Grado</label>
-                <input type="text" class="form-control" id="grado" placeholder="Ingresa tu grado" required />
+                <label for="carnet" class="form-label">Carnet</label>
+                <input type="text" class="form-control" id="carnet" placeholder="Ingresa tu carnet" required />
             </div>
             <div class="mb-3">
                 <label for="especialidad" class="form-label">Especialidad</label>
@@ -117,8 +116,6 @@
         </form>
     </div>
 
-
-
     <footer>
       <div>
     <p>
@@ -128,11 +125,11 @@
   </div>
   </footer>
 
-
+  
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
