--- a/Frontend/assets/html/VisualizarDocentes.html
+++ b/Frontend/assets/html/VisualizarDocentes.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Add.Admin.Alumnos</title>
+  <title>View.Admin.Docentes(VAD)</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/style2.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href=../css/style.css />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -16,18 +14,14 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-
-
 </head>
 
 <body>
-
-
   <!-- Barra de navegación -->
   <!-- fixed top sirve para que el nav no se mueva-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <a class="navbar-brand" href="index.html">
-      <img src="img/IESCentral.png" alt="LogoIES" href="https://www.geahub.online" style="height: 90px" />
+      <img src="../img/IESCentral.png" alt="LogoIES" href="https://www.geahub.online" style="height: 90px" />
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,39 +70,87 @@
     </div>
   </nav>
 
-
-    <!-- Saludo -->
-    <header class="hero bg-primary text-white text-center">
-      <div class="container">
-          <h1 class="display-4">¡Bienvenid@!</h1>
-          <p class="lead">¿Quienes somos los #Somascos?</p>
-      </div>
+  <!-- Saludo -->
+  <header class="hero bg-primary text-white text-center">
+    <div class="container">
+      <h1 class="display-4">Bienvenid@ al listado de Docentes</h1>
+      <p class="lead">Formando técnicos EXITOSOS.</p>
+    </div>
   </header>
 
-  
-  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/C2/1.png" class="d-block w-1" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="img/C2/2.png" class="d-block w-1" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="img/C2/3.png" class="d-block w-1" alt="...">
-      </div>
+  <br>
+  <br>
+
+
+  <div class="container mt-5">
+    <h2 class="mb-4">Datos de Docentes</h2>
+    <div class="tablaAlumnos">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Apellido</th>
+            <th scope="col">Curso</th>
+            <th scope="col">Carnet</th>
+            <th scope="col">Especialidad</th>
+            <th scope="col">Edad</th>
+            <th scope="col">Curso</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+            <td>Mark</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+            <td>Jacob</td>
+          </tr>
+          <tr>
+            <!-- <td colspan="2">Larry the Bird</td> 
+             esto sirve para abarcar 2 celdas al mismo tiempo-->
+            <th scope="row">3</th>
+            <td>@twitter</td>
+            <td>@twitter</td>
+            <td>@twitter</td>
+            <td>@twitter</td>
+            <td>@twitter</td>
+            <td>@twitter</td>
+            <td>@twitter</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 
-  <iframe style="display: block; margin-left: auto; margin-right: auto;" id="post"
-    src="https://es.wikipedia.org/wiki/Orden_de_los_Padres_Somascos" width="600" height="4000"></iframe>
 
 
+  <footer>
+    <div>
+      <p>
+        &copy; 2024 Instituto Emiliani Somascos. Todos los derechos
+        reservados.
+      </p>
+    </div>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="../js/script.js"></script>
 </body>
 
 </html>
