--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
             Administración
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="AggDocente.html">Agregar Docente</a></li>
-            <li><a class="dropdown-item" href="VisualizarDocentes.html">Visualizar Docentes</a></li>
-            <li><a class="dropdown-item" href="AggAlumnos.html">Agregar Alumno</a></li>
-            <li><a class="dropdown-item" href="/getDocentes">Visualizar Alumnos</a></li>
+            <li><a class="dropdown-item" href="/Frontend/assets/html/AggDocente.html">Agregar Docente</a></li>
+            <li><a class="dropdown-item" href="/Frontend/assets/html/VisualizarDocentes.html">Visualizar Docentes</a></li>
+            <li><a class="dropdown-item" href="/Frontend/assets/html/AggAlumnos.html">Agregar Alumno</a></li>
+            <li><a class="dropdown-item" href="/Frontend/assets/html/VisualizarAlumnos.html">Visualizar Alumnos</a></li>
             <li>
               <hr class="dropdown-divider">
             </li> <!--Separador-->
-            <li><a class="dropdown-item" href="somascos.html">#SomosSomascos</a></li>
+            <li><a class="dropdown-item" href="/Frontend/assets/html/somascos.html">#SomosSomascos</a></li>
           </ul>
         </li>
 
