--- a/Frontend/assets/html/VisualizarDocentes.html
+++ b/Frontend/assets/html/VisualizarDocentes.html
@@ -20,7 +20,7 @@
   <!-- Barra de navegación -->
   <!-- fixed top sirve para que el nav no se mueva-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="../../../index.html">
       <img src="../img/IESCentral.png" alt="LogoIES" href="https://www.geahub.online" style="height: 90px" />
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -30,20 +30,21 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="index.html#primaria">Primaria</a>
+          <a class="nav-link" href="../../../index.html#Primaria">Primaria</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#basicos">Básicos</a>
+          <a class="nav-link" href="../../../index.html#Basicos">Básicos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#diversificado">Diversificado</a>
+          <a class="nav-link" href="../../../index.html#Diversificado">Diversificado</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#blog">Blog</a>
+          <a class="nav-link" href="../../../index.html#Blog">Blog</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#anuncios">Anuncios</a>
+          <a class="nav-link" href="../../../index.html#Anuncios">Anuncios</a>
         </li>
+        
 
 
         <!-- Dropdown -->
